# MLOps_project

./: .gitignore  COMPLETION_SUMMARY.md  README.md  REQUIREMENTS_CHECKLIST.md  Untitled-1.ipynb  cloudbuild-train.yaml  cloudbuild.yaml  drift_report.html  pyproject.toml  tasks.py
.github/: dependabot.yml  tests.yaml
.github/workflows/: build-docker-image.yml  ci.yml  codecheck.yaml  loadtest.yml  ruff_autocheck.yaml  test_api.yml  tests.yaml
configs/: config.yaml  sweep.yaml
configs/experiments/: exp1.yaml
configs/hyperparameters/: default.yaml
configs/model/: logistic.yaml
data/processed/: test_features.pkl  test_features.pt  test_targets.pkl  test_targets.pt  train_features.pkl  train_features.pt  train_targets.pkl  train_targets.pt
dockerfiles/: api.dockerfile  data.dockerfile  train.dockerfile
examples/: visualize_example.py
models/: modelweights.pkl  modelweights.pth
profiling/: profile_training.py
reports/: README.md
src/mlops_project/: api.py  data.py  data_pickle.py  drift_detection.py  drift_logging.py  drift_reference.py  evaluate.py  model.py  train.py  train_pickle.py  visualize.py
src/mlops_project/api/: __init__.py  main.py  requirements.txt  run_local.py  titanic_predictor.html
src/models/: modelweights.pkl  modelweights.pth
src/wandb/: latest-run
src/wandb/run-20260115_150101-cp4of6gi/: run-cp4of6gi.wandb
sweep/: sweep.yaml
tests/: conftest.py  test_api_local.py  test_data.py  test_model.py  test_training.py
tests/integrationtests/: test_api.py
tests/performancetests/: locustfile.py
tests/unittests/: test_data.py  test_training.py
wandb/: latest-run
wandb/run-20260115_100233-ufeh8bip/: run-ufeh8bip.wandb
wandb/run-20260115_100233-ufeh8bip/files/: config.yaml  requirements.txt  wandb-metadata.json  (+1 more)
wandb/run-20260116_151315-izvjqevf/: run-izvjqevf.wandb
(+14 files in other folders)
